Add package json-glib

--- a/index.html
+++ b/index.html
@@ -1489,6 +1489,10 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="https://github.com/json-c/json-c/wiki">json-c</a></td>
     </tr>
     <tr>
+        <td class="package">json-glib</td>
+        <td class="website"><a href="https://wiki.gnome.org/action/show/Projects/JsonGlib">JSON-Glib</a></td>
+    </tr>
+    <tr>
         <td class="package">json_spirit</td>
         <td class="website"><a href="https://www.codeproject.com/Articles/20027/JSON-Spirit-A-C-JSON-Parser-Generator-Implemented">json_spirit</a></td>
     </tr>
