--- a/index.html
+++ b/index.html
@@ -1353,6 +1353,10 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="http://www.gmplib.org/">GMP</a></td>
     </tr>
     <tr>
+        <td class="package">gnome-icon-theme</td>
+        <td class="website"><a href="http://www.gnome.org/">Gnome Icon Theme</a></td>
+    </tr>
+    <tr>
         <td class="package">gnutls</td>
         <td class="website"><a href="https://www.gnu.org/software/gnutls/">GnuTLS</a></td>
     </tr>
