Add package GTK3

--- a/index.html
+++ b/index.html
@@ -1397,6 +1397,10 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="http://www.gtk.org/">GTK+</a></td>
     </tr>
     <tr>
+        <td class="package">gtk3</td>
+        <td class="website"><a href="http://www.gtk.org/">GTK+</a></td>
+    </tr>
+    <tr>
         <td class="package">gtkglarea</td>
         <td class="website"><a href="http://www.mono-project.com/GtkGLArea/">GtkGLArea</a></td>
     </tr>
